tests/ui/self/arbitrary-self-from-method-substs.default.stderr
error[E0801]: invalid generic `self` parameter type: `R`
  --> $DIR/arbitrary-self-from-method-substs.rs:12:43
   |
LL |     fn get<R: Deref<Target = Self>>(self: R) -> u32
   |                                           ^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0801]: invalid generic `self` parameter type: `&R`
  --> $DIR/arbitrary-self-from-method-substs.rs:20:44
   |
LL |     fn get1<R: Deref<Target = Self>>(self: &R) -> u32
   |                                            ^^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0801]: invalid generic `self` parameter type: `&mut R`
  --> $DIR/arbitrary-self-from-method-substs.rs:28:44
   |
LL |     fn get2<R: Deref<Target = Self>>(self: &mut R) -> u32
   |                                            ^^^^^^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0801]: invalid generic `self` parameter type: `Rc<R>`
  --> $DIR/arbitrary-self-from-method-substs.rs:36:44
   |
LL |     fn get3<R: Deref<Target = Self>>(self: std::rc::Rc<R>) -> u32
   |                                            ^^^^^^^^^^^^^^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0801]: invalid generic `self` parameter type: `&Rc<R>`
  --> $DIR/arbitrary-self-from-method-substs.rs:44:44
   |
LL |     fn get4<R: Deref<Target = Self>>(self: &std::rc::Rc<R>) -> u32
   |                                            ^^^^^^^^^^^^^^^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0801]: invalid generic `self` parameter type: `Rc<&R>`
  --> $DIR/arbitrary-self-from-method-substs.rs:52:44
   |
LL |     fn get5<R: Deref<Target = Self>>(self: std::rc::Rc<&R>) -> u32
   |                                            ^^^^^^^^^^^^^^^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0307]: invalid `self` parameter type: `<FR as FindReceiver>::Receiver`
  --> $DIR/arbitrary-self-from-method-substs.rs:63:37
   |
LL |     fn get6<FR: FindReceiver>(self: FR::Receiver, other: FR) -> u32 {
   |                                     ^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`);
           alternatively, consider implement `Receiver` trait on the type of `self`, where applicable

error[E0307]: invalid `self` parameter type: `R`
  --> $DIR/arbitrary-self-from-method-substs.rs:102:18
   |
LL |     fn get(self: R) {}
   |                  ^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`);
           alternatively, consider implement `Receiver` trait on the type of `self`, where applicable

error[E0271]: type mismatch resolving `<Silly as FindReceiver>::Receiver == Foo`
  --> $DIR/arbitrary-self-from-method-substs.rs:136:9
   |
LL |     foo.get6(Silly);
   |         ^^^^ type mismatch resolving `<Silly as FindReceiver>::Receiver == Foo`
   |
note: expected this to be `Foo`
  --> $DIR/arbitrary-self-from-method-substs.rs:115:21
   |
LL |     type Receiver = std::rc::Rc<Foo>;
   |                     ^^^^^^^^^^^^^^^^
   = note: expected struct `Foo`
              found struct `Rc<Foo>`

error[E0271]: type mismatch resolving `<Silly as FindReceiver>::Receiver == &Foo`
  --> $DIR/arbitrary-self-from-method-substs.rs:140:9
   |
LL |     foo.get6(Silly);
   |         ^^^^ type mismatch resolving `<Silly as FindReceiver>::Receiver == &Foo`
   |
note: expected this to be `&Foo`
  --> $DIR/arbitrary-self-from-method-substs.rs:115:21
   |
LL |     type Receiver = std::rc::Rc<Foo>;
   |                     ^^^^^^^^^^^^^^^^
   = note: expected reference `&Foo`
                 found struct `Rc<Foo>`

error[E0599]: the method `get` exists for struct `Rc<Bar<_>>`, but its trait bounds were not satisfied
  --> $DIR/arbitrary-self-from-method-substs.rs:144:7
   |
LL | struct Bar<R>(std::marker::PhantomData<R>);
   | ------------- doesn't satisfy `Bar<_>: Deref`
...
LL |     t.get();
   |       ^^^ method cannot be called on `Rc<Bar<_>>` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `<&Bar<_> as Deref>::Target = Bar<&Bar<_>>`
      `<&Rc<Bar<_>> as Deref>::Target = Bar<&Rc<Bar<_>>>`
      `<&mut Bar<_> as Deref>::Target = Bar<&mut Bar<_>>`
      `<&mut Rc<Bar<_>> as Deref>::Target = Bar<&mut Rc<Bar<_>>>`
      `<Rc<Bar<_>> as Deref>::Target = Bar<Rc<Bar<_>>>`
      `Bar<_>: Deref`
  --> $DIR/arbitrary-self-from-method-substs.rs:97:9
   |
LL | impl<R: Deref<Target = Self>> Bar<R>
   |         ^^^^^^^^^^^^^^^^^^^^  ------
   |         |     |
   |         |     unsatisfied trait bound introduced here
   |         unsatisfied trait bound introduced here
note: the trait `Deref` must be implemented
  --> $SRC_DIR/core/src/ops/deref.rs:LL:COL
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `get`, perhaps you need to implement it:
           candidate #1: `SliceIndex`

error[E0599]: the method `get` exists for reference `&Rc<Bar<_>>`, but its trait bounds were not satisfied
  --> $DIR/arbitrary-self-from-method-substs.rs:152:7
   |
LL | struct Bar<R>(std::marker::PhantomData<R>);
   | ------------- doesn't satisfy `Bar<_>: Deref`
...
LL |     t.get();
   |       ^^^ method cannot be called on `&Rc<Bar<_>>` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `<&&Rc<Bar<_>> as Deref>::Target = Bar<&&Rc<Bar<_>>>`
      `<&Bar<_> as Deref>::Target = Bar<&Bar<_>>`
      `<&Rc<Bar<_>> as Deref>::Target = Bar<&Rc<Bar<_>>>`
      `<&mut &Rc<Bar<_>> as Deref>::Target = Bar<&mut &Rc<Bar<_>>>`
      `<&mut Bar<_> as Deref>::Target = Bar<&mut Bar<_>>`
      `<&mut Rc<Bar<_>> as Deref>::Target = Bar<&mut Rc<Bar<_>>>`
      `<Rc<Bar<_>> as Deref>::Target = Bar<Rc<Bar<_>>>`
      `Bar<_>: Deref`
  --> $DIR/arbitrary-self-from-method-substs.rs:97:9
   |
LL | impl<R: Deref<Target = Self>> Bar<R>
   |         ^^^^^^^^^^^^^^^^^^^^  ------
   |         |     |
   |         |     unsatisfied trait bound introduced here
   |         unsatisfied trait bound introduced here
note: the trait `Deref` must be implemented
  --> $SRC_DIR/core/src/ops/deref.rs:LL:COL
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `get`, perhaps you need to implement it:
           candidate #1: `SliceIndex`

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0271, E0307, E0599, E0801.
For more information about an error, try `rustc --explain E0271`.
